tests/neg-custom-args/captures/usingLogFile-alt.check
-- Error: tests/neg-custom-args/captures/usingLogFile-alt.scala:18:2 ---------------------------------------------------
18 |  usingFile( // error
   |  ^^^^^^^^^
   |  reference (file : java.io.OutputStream^{lcap}) is not included in the allowed capture set {x$0, x$0²}
   |
   |  Note that reference (file : java.io.OutputStream^{lcap}), defined at level 4
   |  cannot be included in outer capture set {x$0, x$0}, defined at level 0 in package <root>
   |
   |  where:    x$0  is a reference to a value parameter
   |            x$0² is a reference to a value parameter
